[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/img/background.png" type="Texture" id=2]
[ext_resource path="res://assets/font/Augusta.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/img/arm.png" type="Texture" id=4]
[ext_resource path="res://assets/img/body_tex.png" type="Texture" id=5]
[ext_resource path="res://assets/img/anger.png" type="Texture" id=6]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/ArmLeft:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/ArmRight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 20.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/ArmRight:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 20.0, 40.0, 30.0, 0.0, 20.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/ArmLeft:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 5.0, 15.0, 0.0 ]
}

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Mephistopheles" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Mephistopheles"]
position = Vector2( 402, 280 )
texture = ExtResource( 5 )

[node name="Head" type="Position2D" parent="Mephistopheles/Sprite"]
position = Vector2( -9, -54 )

[node name="Sprite" type="Sprite" parent="Mephistopheles/Sprite/Head"]
texture = ExtResource( 6 )

[node name="ArmRight" type="Position2D" parent="Mephistopheles/Sprite"]
position = Vector2( -16, -39 )
rotation = 0.349066

[node name="Sprite" type="Sprite" parent="Mephistopheles/Sprite/ArmRight"]
position = Vector2( -17, 10 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="ArmLeft" type="Position2D" parent="Mephistopheles/Sprite"]
position = Vector2( 0, -39 )

[node name="Sprite" type="Sprite" parent="Mephistopheles/Sprite/ArmLeft"]
position = Vector2( -17, 10 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Mephistopheles"]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="GameContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 643.0
margin_bottom = 395.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GameContainer/VBoxContainer"]
margin_right = 618.0
margin_bottom = 85.0
custom_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameContainer/VBoxContainer/HBoxContainer"]
margin_right = 140.0
margin_bottom = 85.0
size_flags_horizontal = 3

[node name="Clock" type="Label" parent="CanvasLayer/GameContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 140.0
margin_bottom = 28.0
rect_min_size = Vector2( 140, 0 )
text = "Time: xxx"

[node name="Rules" type="Label" parent="CanvasLayer/GameContainer/VBoxContainer/HBoxContainer"]
margin_left = 150.0
margin_right = 493.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
custom_fonts/font = SubResource( 1 )
text = "Mind your Ps are Qs, and vowels are shifted, and words are backwards, and vowels are all Es, and words are in alphabetical order, and Ds are Bs
"
align = 1
autowrap = true

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/GameContainer/VBoxContainer/HBoxContainer"]
margin_left = 503.0
margin_right = 618.0
margin_bottom = 85.0
size_flags_horizontal = 3

[node name="Score" type="Label" parent="CanvasLayer/GameContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 115.0
margin_bottom = 28.0
text = "Score: xxx"

[node name="Fragments" type="HBoxContainer" parent="CanvasLayer/GameContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 618.0
margin_bottom = 352.0
size_flags_vertical = 3

[node name="Prefixes" type="VBoxContainer" parent="CanvasLayer/GameContainer/VBoxContainer/Fragments"]
margin_right = 78.0
margin_bottom = 263.0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/GameContainer/VBoxContainer/Fragments/Prefixes"]
margin_top = 97.0
margin_right = 78.0
margin_bottom = 111.0
text = "test content"

[node name="Label2" type="Label" parent="CanvasLayer/GameContainer/VBoxContainer/Fragments/Prefixes"]
margin_top = 115.0
margin_right = 78.0
margin_bottom = 129.0
text = "test content"

[node name="Label3" type="Label" parent="CanvasLayer/GameContainer/VBoxContainer/Fragments/Prefixes"]
margin_top = 133.0
margin_right = 78.0
margin_bottom = 147.0
text = "test content"

[node name="Label4" type="Label" parent="CanvasLayer/GameContainer/VBoxContainer/Fragments/Prefixes"]
margin_top = 151.0
margin_right = 78.0
margin_bottom = 165.0
text = "test content"

[node name="Spacer" type="HBoxContainer" parent="CanvasLayer/GameContainer/VBoxContainer/Fragments"]
margin_left = 82.0
margin_right = 536.0
margin_bottom = 263.0
size_flags_horizontal = 3

[node name="Suffixes" type="VBoxContainer" parent="CanvasLayer/GameContainer/VBoxContainer/Fragments"]
margin_left = 540.0
margin_right = 618.0
margin_bottom = 263.0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/GameContainer/VBoxContainer/Fragments/Suffixes"]
margin_top = 97.0
margin_right = 78.0
margin_bottom = 111.0
text = "test content"

[node name="Label2" type="Label" parent="CanvasLayer/GameContainer/VBoxContainer/Fragments/Suffixes"]
margin_top = 115.0
margin_right = 78.0
margin_bottom = 129.0
text = "test content"

[node name="Label3" type="Label" parent="CanvasLayer/GameContainer/VBoxContainer/Fragments/Suffixes"]
margin_top = 133.0
margin_right = 78.0
margin_bottom = 147.0
text = "test content"

[node name="Label4" type="Label" parent="CanvasLayer/GameContainer/VBoxContainer/Fragments/Suffixes"]
margin_top = 151.0
margin_right = 78.0
margin_bottom = 165.0
text = "test content"

[node name="Typed" type="Label" parent="CanvasLayer/GameContainer/VBoxContainer"]
margin_top = 356.0
margin_right = 618.0
margin_bottom = 370.0
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Health" type="Label" parent="CanvasLayer/CenterContainer"]
margin_left = 296.0
margin_top = 203.0
margin_right = 371.0
margin_bottom = 217.0
size_flags_horizontal = 3
text = "Health : xxx"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 292.0
margin_top = 183.0
margin_right = 375.0
margin_bottom = 237.0
custom_constants/separation = 20

[node name="GameOver" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 14.0
align = 1

[node name="StartButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 83.0
margin_bottom = 54.0
text = "Start Game"

[node name="CurseChooser" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
visible = false
margin_left = 285.0
margin_top = 150.0
margin_right = 383.0
margin_bottom = 269.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/CurseChooser"]
margin_right = 98.0
margin_bottom = 14.0
text = "Choose a Curse"
align = 1

[node name="Choice" type="Button" parent="CanvasLayer/CenterContainer/CurseChooser"]
margin_right = 73.0
margin_bottom = 20.0
text = "Ps are Qs"

[node name="Choice2" type="Button" parent="CanvasLayer/CenterContainer/CurseChooser"]
margin_top = 64.0
margin_right = 98.0
margin_bottom = 84.0
text = "Ps are Qs"

[node name="Choice3" type="Button" parent="CanvasLayer/CenterContainer/CurseChooser"]
margin_top = 99.0
margin_right = 98.0
margin_bottom = 119.0
text = "Ps are Qs"

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/StartButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/CurseChooser/Choice" to="." method="_on_Choice_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/CurseChooser/Choice2" to="." method="_on_Choice2_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/CurseChooser/Choice3" to="." method="_on_Choice3_pressed"]
